--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,15 @@ services:
     build:
       context: ./backend
       dockerfile: Dockerfile
+    restart: always
+    extra_hosts:
+      - 'host.docker.internal:host-gateway'
     ports:
       - "5000:5000"
+    networks:
+      - backend
     depends_on:
-      - db
+      - mysql
   frontend:
     build:
       context: ./frontend
@@ -16,11 +21,28 @@ services:
       - "8080:8080"
     depends_on:
       - backend
-  db:
-    image: mysql:latest
+  mysql:
+    image: 'mysql/mysql-server:8.0'
+    ports:
+      - '3306:3306'
     environment:
-      MYSQL_DATABASE: echoes
-      MYSQL_PASSWORD:
+      MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
+      MYSQL_ROOT_HOST: "%"
+      MYSQL_DATABASE: '${DB_DATABASE}'
+      MYSQL_USER: '${DB_USERNAME}'
+      MYSQL_PASSWORD: '${DB_PASSWORD}'
       MYSQL_ALLOW_EMPTY_PASSWORD: 1
     volumes:
-      - "./db:/docker-entrypoint-initdb.d"
+      - "echoes-mysql:/var/lib/mysql"
+    networks:
+      - backend
+    healthcheck:
+      test: [ "CMD", "mysqladmin", "ping", "-p${DB_PASSWORD}" ]
+      retries: 3
+      timeout: 5s
+networks:
+  backend:
+    driver: bridge
+volumes:
+  echoes-mysql:
+    driver: local
