--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,15 +10,21 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "vue": "^3.3.4"
+    "sweetalert2": "^11.10.1",
+    "vue": "^3.3.4",
+    "vue3-smooth-scroll": "^0.8.1"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
+    "@tailwindcss/forms": "^0.5.7",
     "@vitejs/plugin-vue": "^4.4.0",
     "@vue/eslint-config-prettier": "^8.0.0",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
+    "postcss": "^8.4.32",
     "prettier": "^3.0.3",
+    "tailwindcss": "^3.3.6",
     "vite": "^4.4.11"
   }
 }
