--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,11 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "sweetalert2": "^11.10.1",
+    "@vueuse/core": "^10.7.0",
+    "axios": "^1.6.2",
+    "sweetalert2": "^11.6.13",
     "vue": "^3.3.4",
+    "vue-router": "^4.2.5",
     "vue3-smooth-scroll": "^0.8.1"
   },
   "devDependencies": {
