--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,30 +1,50 @@
 alembic==1.12.1
 attrs==23.1.0
 bcrypt==4.0.1
+beautifulsoup4==4.12.2
 blinker==1.7.0
+certifi==2023.11.17
+charset-normalizer==3.3.2
 click==8.1.7
+exceptiongroup==1.2.0
 flasgger==0.9.7b2
 Flask==3.0.0
 Flask-Bcrypt==1.0.1
+Flask-Cors==4.0.0
 Flask-Migrate==4.0.5
 Flask-SQLAlchemy==3.1.1
 greenlet==3.0.1
+h11==0.14.0
+idna==3.6
 itsdangerous==2.1.2
 Jinja2==3.1.2
 jsonschema==4.20.0
 jsonschema-specifications==2023.11.1
+lxml==4.9.3
 Mako==1.3.0
 MarkupSafe==2.1.3
 mistune==3.0.2
 mysqlclient==2.2.0
+outcome==1.3.0.post0
 packaging==23.2
 pathlib==1.0.1
 PyJWT==2.8.0
+PySocks==1.7.1
 python-dotenv==1.0.0
 PyYAML==6.0.1
 referencing==0.31.0
+requests==2.31.0
 rpds-py==0.13.1
+selenium==4.15.2
 six==1.16.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
+soupsieve==2.5
 SQLAlchemy==2.0.23
+trio==0.23.1
+trio-websocket==0.11.1
 typing_extensions==4.8.0
+urllib3==2.1.0
+webdriver-manager==4.0.1
 Werkzeug==3.0.1
+wsproto==1.2.0
